trying to revert to older code as havinnng issues with scrolling on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -866,7 +866,7 @@ section {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -905,6 +905,7 @@ section {
 
 #projects {
     margin-top: -80px !important;
+    /* Adjust the value to move it up more or less */
 }
 
 
@@ -1170,7 +1171,7 @@ section {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1180,7 +1181,7 @@ section {
 }
 
 .blog-card:hover .overlay {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .blog-card h4,
@@ -1283,17 +1284,6 @@ footer .list-inline-item a i:hover {
 .fa-2x {
     font-size: 2rem;
 }
-#scroll-container, #scroll-container-blog {
-  display: flex;
-  overflow-x: scroll;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
-}
-
-.project-card, .blog-card {
-  scroll-snap-align: center;
-}
-
 
 
 /* ========== Media Query for Mobile (Max Width: 768px) ========== */
@@ -2006,3 +1996,6 @@ footer .list-inline-item a i:hover {
         bottom: 5%; /* Adjust this value as needed */
     }
 }
+  
+  
+  
